crates/ruff_python_parser/tests/snapshots/invalid_syntax@invalid_tstring_literal_element.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/invalid_tstring_literal_element.py
---
## AST

```
Module(
    ModModule {
        range: 0..58,
        body: [
            Expr(
                StmtExpr {
                    range: 0..26,
                    value: TString(
                        ExprTString {
                            range: 0..26,
                            value: TStringValue {
                                inner: Single(
                                    TString(
                                        TString {
                                            range: 0..26,
                                            elements: [
                                                Literal(
                                                    TStringLiteralElement {
                                                        range: 2..25,
                                                        value: "",
                                                    },
                                                ),
                                            ],
                                            flags: TStringFlags {
                                                quote_style: Single,
                                                prefix: Regular,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 27..57,
                    value: TString(
                        ExprTString {
                            range: 27..57,
                            value: TStringValue {
                                inner: Single(
                                    TString(
                                        TString {
                                            range: 27..57,
                                            elements: [
                                                Literal(
                                                    TStringLiteralElement {
                                                        range: 31..54,
                                                        value: "",
                                                    },
                                                ),
                                            ],
                                            flags: TStringFlags {
                                                quote_style: Double,
                                                prefix: Regular,
                                                triple_quoted: true,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | t'hello \N{INVALID} world'
  |            ^^^^^^^ Syntax Error: Got unexpected unicode
2 | t"""hello \N{INVALID} world"""
  |


  |
1 | t'hello \N{INVALID} world'
2 | t"""hello \N{INVALID} world"""
  |              ^^^^^^^ Syntax Error: Got unexpected unicode
  |
