crates/ruff_python_parser/tests/snapshots/invalid_syntax@invalid_value_expr.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/invalid_value_expr.py
---
## AST

```
Module(
    ModModule {
        range: 0..56,
        body: [
            Expr(
                StmtExpr {
                    range: 0..8,
                    value: Starred(
                        ExprStarred {
                            range: 0..8,
                            value: BoolOp(
                                ExprBoolOp {
                                    range: 1..8,
                                    op: And,
                                    values: [
                                        Name(
                                            ExprName {
                                                range: 1..2,
                                                id: Name("a"),
                                                ctx: Load,
                                            },
                                        ),
                                        Name(
                                            ExprName {
                                                range: 7..8,
                                                id: Name("b"),
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 9..17,
                    value: Starred(
                        ExprStarred {
                            range: 9..17,
                            value: Yield(
                                ExprYield {
                                    range: 10..17,
                                    value: Some(
                                        Name(
                                            ExprName {
                                                range: 16..17,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 18..31,
                    value: Starred(
                        ExprStarred {
                            range: 18..31,
                            value: YieldFrom(
                                ExprYieldFrom {
                                    range: 19..31,
                                    value: Name(
                                        ExprName {
                                            range: 30..31,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 32..44,
                    value: Starred(
                        ExprStarred {
                            range: 32..44,
                            value: Lambda(
                                ExprLambda {
                                    range: 33..44,
                                    parameters: Some(
                                        Parameters {
                                            range: 40..41,
                                            posonlyargs: [],
                                            args: [
                                                ParameterWithDefault {
                                                    range: 40..41,
                                                    parameter: Parameter {
                                                        range: 40..41,
                                                        name: Identifier {
                                                            id: Name("x"),
                                                            range: 40..41,
                                                        },
                                                        annotation: None,
                                                    },
                                                    default: None,
                                                },
                                            ],
                                            vararg: None,
                                            kwonlyargs: [],
                                            kwarg: None,
                                        },
                                    ),
                                    body: Name(
                                        ExprName {
                                            range: 43..44,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Assign(
                StmtAssign {
                    range: 45..50,
                    targets: [
                        Name(
                            ExprName {
                                range: 45..46,
                                id: Name("x"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: Name(
                        ExprName {
                            range: 49..50,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 54..55,
                    value: NumberLiteral(
                        ExprNumberLiteral {
                            range: 54..55,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | *a and b
  |  ^^^^^^^ Syntax Error: Boolean expression cannot be used here
2 | *yield x
3 | *yield from x
  |


  |
1 | *a and b
2 | *yield x
  |  ^^^^^^^ Syntax Error: Yield expression cannot be used here
3 | *yield from x
4 | *lambda x: x
  |


  |
1 | *a and b
2 | *yield x
3 | *yield from x
  |  ^^^^^^^^^^^^ Syntax Error: Yield expression cannot be used here
4 | *lambda x: x
5 | x = x := 1
  |


  |
2 | *yield x
3 | *yield from x
4 | *lambda x: x
  |  ^^^^^^^^^^^ Syntax Error: Lambda expression cannot be used here
5 | x = x := 1
  |


  |
3 | *yield from x
4 | *lambda x: x
5 | x = x := 1
  |       ^^ Syntax Error: Expected a statement
  |
