crates/ruff_python_parser/tests/snapshots/invalid_syntax@ipython_help_escape_command_as_expression.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/ipython_help_escape_command_as_expression.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..53,
        body: [
            With(
                StmtWith {
                    node_index: NodeIndex(None),
                    range: 37..52,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 42..43,
                            node_index: NodeIndex(None),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 42..43,
                                    id: Name("a"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                        WithItem {
                            range: 45..46,
                            node_index: NodeIndex(None),
                            context_expr: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 45..46,
                                    id: Name("b"),
                                    ctx: Load,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [
                        Pass(
                            StmtPass {
                                node_index: NodeIndex(None),
                                range: 48..52,
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # parse_options: {"mode": "ipython"}
2 | with a,?b: pass
  |        ^ Syntax Error: Expected `,`, found `?`
  |
